--- a/flask/pybo/templates/index.html
+++ b/flask/pybo/templates/index.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 {% extends "base.html" %}
 
 {% block content %}
@@ -11,22 +10,10 @@
                  <li class="list-group-item">
                      <a href="{{ url_for('img_processing') }}">디지털영상처리 - 정지영상</a>
                  </li>
+                 <li class="list-group-item">
+                     <a href="{{ url_for('webcam_yolo') }}">YOLO - video</a>
+                 </li>
             </ul>
         </div>
     </div>
-=======
-{% extends "base.html" %}
-
-{% block content %}
-    <div class="card">
-        <div class="card-header">
-            <h4> 멀티미디어프로그래밍 2023-2 </h4>
-        </div>
-        <div class="card-body">
-             <ul class="list-group">
-                 <li class="list-group-item"><a href="{{ url_for('img_processing') }}">디지털영상처리 - 정지영상</a></li>
-            </ul>
-        </div>
-    </div>
->>>>>>> 104e7ff571a8b890116b54179686f4a6b4e42ea9
 {% endblock %}
